First commit for test

--- a/hw1/Makefile
+++ b/hw1/Makefile
@@ -1,69 +1,37 @@
-# .PHONY: all clean run
-# CXX = g++
-# CC = gcc
-# CFLAGS = -Wall -std=c++11 -Wno-psabi
-# OPTFLAGS = -g
-# OPTFLAGS = -O3
-# LDFLAGS = -lm
-# DBGFLAGS = -g -D_DEBUG_ON_
-# TRAIN_ITER = 100
-
-# SRC_DIR = src/
-# INC_DIR = inc/
-# INC_DIR = src/
-
-# TARGET = training # test
-# INC = -I$(INC_DIR)
-# SRC = $(wildcard $(SRC_DIR*.cpp))
-# OBJ = $(SRC:%.cpp = %.o)
-
-# all: $(TARGET)
-# 	@echo -n ""
-
-# train : src/train_opt.o src/FB_opt.o inc
-# 	$(CXX) $(OPTFLAGS) train_opt.o FB_opt.o -hmm -Llib -o train
-# train_opt.o : src/train.cpp inc/hmm.h
-# 	$(CC) $(CFLAGS) $< -Ilib -o $@
-# FB_opt.o : src/FB.cpp src/FB.h
-# 	$(CC) $(CFLAGS) $(OPTFLAGS) $< -o $@
-# #  $(CXX) $(CFLAGS) $(INC) $(OPTFLAGS) -o $@ $^  $(LDFLAGS) -Iinc
-# # @echo "train FINISH "
-
-# # test: src/test.cpp
-# # 	$(CXX) -o $@ $^ $(CFLAGS) $(LDFLAGS) -Iinc
-# # 	@echo "test FINISH"
-
-# clean:
-# 	rm -f $(TARGET)
-
+.PHONY: all clean run
 
 CXX = g++
-CFLAGS = -Wall -std=c++11 -Wno-psabi
+CFLAGS = -O2 -Wall -std=c++11 -Wno-psabi
 OPTFLAGS = -g
-OPTFLAGS = -O3
+LDFLAGS = -lm
+DBGFLAGS = -g -D_DEBUG_ON_
+TRAIN_ITER = 100
 
 SRC_DIR = src/
-INC_DIR = src/
 INC_DIR = inc/
+INC_DIR = src/
 
-EXEC = train
-BIN	= $(EXEC)
 INC = -I$(INC_DIR)
 SRC = $(wildcard $(SRC_DIR)*.cpp)
-OBJ = $(SRC:%.cpp=%.o)
+OBJ = $(SRC: %.cpp = %.o)
 
-.PHONY: all clean
+TARGET: train test
 
-all: $(BIN)
+all: $(TARGET)
+	@echo -n ""
 
-$(BIN): $(OBJ)
-	$(CXX) $(CFLAGS) $(INC) $(OPTFLAGS) $^ -o $(BIN)
-	@echo "FINISH"
+train: src/train.o inc/FB.o inc/tm_usage.o
+	$(CXX) $(CFLAGS) $(INC) $(OPTFLAGS) $^ -o train
+	@echo "FINISH train"
+
+test: src/test.o inc/Viterbi.o inc/tm_usage.o
+	$(CXX) $(CFLAGS) $(INC) $(OPTFLAGS) $^ -o test
+	@echo "FINISH test"
 
 %.o : %.cpp
 	@echo ">> compiling: $<"
-	$(CXX) $(CFLAGS) -c $< -o $@
+	$(CXX) $(CFLAGS) $(INC) -lpthread -c $< -o $@
+
 clean:
-	rm -f $(BIN) $(OBJ)
-	rm -rf *.o lib/*.a lib/*.o bin/*
- 
+	rm -f $(OBJ)
+	rm -rf *.o src/*.o inc/*.o src/*.o
