--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,47 @@
-# Certain files
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+*.tgz
+*.zip
+*.doc
+*.docx
+*.vscode
+*.vs
+
+# Certain folders
 hmm-master
 Markov Chain
 講義
 
-# PDF
-*.pdf
+# Certain files
+Final_Project.pptx
